--- a/EducationEverest/css/File_admission_application.css
+++ b/EducationEverest/css/File_admission_application.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 	.menu_bg
 {
 	background : #F2F2F2;
@@ -1226,13 +1226,15 @@ margin-right: -10em;
 .profile_card_bg_2
 {
   background : #FFCB28;
-  background : rgba(255, 203, 40, 1);
-  position : relative ;
+  background : #FFCB28;
+  position : relative;
   width : 100%;
   height : 107px;
   border-radius : 2px 2px 0px 0px;
   -moz-border-radius : 2px 2px 0px 0px;
   -webkit-border-radius : 2px 2px 0px 0px;
+    top: 31px;
+    left: 96px;
 }
 .profile_card_bg
 {
@@ -1311,13 +1313,13 @@ margin-right: -10em;
 }
 .profile_image
 {
-  background-image : url(../images/profile_pic.png);
+  background-image : url('../images/profile_pic.png');
   /*To create image referenced in CSS, use 'Export Selected CSS' command.*/
   background-repeat : no-repeat;
-  position : absolute ;
+  position : absolute;
   display: block;
-  left : 30%;
-  top : 70px;
+  left : 33%;
+  top : 92px;
   width : 119px;
   height : 119px;
 }
@@ -1515,8 +1517,8 @@ margin-right: -10em;
   border-color : #FF9800;*/
   /*border-color : rgba(255, 152, 0, 1);
   border-width : 2px;*/
-  width : 20px;
-  height : 20px;
+  width : 50px;
+  height : 50px;
 
 }
 .NormalCharacterStyle112
