--- a/EducationEverest/css/File_admission_application.css
+++ b/EducationEverest/css/File_admission_application.css
@@ -1225,16 +1225,16 @@ margin-right: -10em;
 }
 .profile_card_bg_2
 {
+  
   background : #FFCB28;
-  background : #FFCB28;
-  position : relative;
+  position:static;
   width : 100%;
   height : 107px;
   border-radius : 2px 2px 0px 0px;
   -moz-border-radius : 2px 2px 0px 0px;
   -webkit-border-radius : 2px 2px 0px 0px;
-    top: 31px;
-    left: 96px;
+    /*top: 16px;
+    left: 8px;*/
 }
 .profile_card_bg
 {
@@ -1318,8 +1318,8 @@ margin-right: -10em;
   background-repeat : no-repeat;
   position : absolute;
   display: block;
-  left : 33%;
-  top : 92px;
+  left : 34%;
+  top : 97px;
   width : 119px;
   height : 119px;
 }
@@ -1409,6 +1409,7 @@ margin-right: -10em;
 	color: white;
 	width : 140px;
 	height : 35px;
+   
 	border-radius : 2px;
 	-moz-border-radius : 2px;
 	-webkit-border-radius : 2px;
