--- a/EducationEverest/Client.master
+++ b/EducationEverest/Client.master
@@ -92,7 +92,7 @@
     <a data-toggle="collapse" data-target="#clps2" class="main_list NormalCharacterStyle18">File Admission App<div class="icon-arrow-right pull-right"><a class="glyphicon glyphicon-chevron-down dropdown_icon " data-toggle="collapse" data-target="#clps2"></a></div></a>
     <div class="collapse" id="clps2">
       <br/>
-        <li class="menu_list selected_bg"><a href="Personal_Details" class="NormalCharacterStyle22">Personal Details</a></li>
+        <li class="menu_list selected_bg"><a href="Personal_Detail" class="NormalCharacterStyle22">Personal Detail</a></li>
         <li class="menu_list"><a href="choices" class="NormalCharacterStyle24">Make Choices</a></li>
         <li class="menu_list"><a href="educational_detail" class="NormalCharacterStyle24">Educational Details</a></li>
         <li class="menu_list"><a href="Test_Result" class="NormalCharacterStyle24">Test Results</a></li>
