--- a/Design HTML/css/File_admission_application.css
+++ b/Design HTML/css/File_admission_application.css
@@ -1749,6 +1749,21 @@ margin-right: -10.8em;
   color : rgb(230, 230, 230);
 }
 
+.NormalCharacterStyle220
+{
+  font-family : Raleway;
+  font-size : 21px;
+  color : #2196F3;
+  color : rgb(33, 150, 243);
+}
+.NormalCharacterStyle221
+{
+  font-family : Myriad Pro;
+  font-size : 14px;
+  line-height : 22px;
+  color : #2196F3;
+  color : rgb(33, 150, 243);
+}
 
 .uni_details_page_bg_2_
 {
@@ -1782,4 +1797,20 @@ margin-right: -10.8em;
   position: absolute;
   height: 60px;
 
+}
+.register_button_bg
+{
+  border-style : Solid;
+  border-color : #2196F3;
+  border-color : rgba(33, 150, 243, 1);
+  border-width : 1px;
+   margin-left: 110px;
+  background-color: transparent;
+  width : 350px;
+  height : 48px;
+  border-radius : 2px;
+  -moz-border-radius : 2px;
+  -webkit-border-radius : 2px;
+  box-shadow : 1px 1px 2px rgba(0, 0, 0, 0.75);
+  filter: progid:DXImageTransform.Microsoft.dropshadow(OffX=1, OffY=1, Color='#000000') ;
 }
