--- a/EducationEverest/css/File_admission_application.css
+++ b/EducationEverest/css/File_admission_application.css
@@ -1740,3 +1740,10 @@ margin-right: -10em;
   width : 250px;
   height : 152px;
 }
+
+/*.logged_User_FName{
+    font-size:20px;
+    color:#2196F3;
+    border-bottom:1px solid;
+    border-color:white;
+}*/
