--- a/EducationEverest/Client.master
+++ b/EducationEverest/Client.master
@@ -43,7 +43,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="#" style="font-size: 20px;top: 6px;">Home </a></li>
-        <li><a href="#"><img src="images/header_dashboard_button_1_.png" style="margin: -15px;height: 65px"></a></li>
+        <li><a href="Dashboard.aspx"><img src="images/header_dashboard_button_1_.png" style="margin: -15px;height: 65px"></a></li>
         <li style="color: transparent;">home</li>
       </ul>
       <form class="navbar-form navbar-left">
@@ -56,9 +56,10 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><img src="images/header_notification_icon_1_.png"></a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img src="images/header_username_1_.png">&nbsp;<img src="images/header_profile_icon_1_.png"></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              <asp:Label ID="lblLoggedUser" runat="server" Text=""  style="font-size:20px;color:#0094ff;border-bottom:1px solid;border-color:white"></asp:Label>&nbsp;<img src="images/header_profile_icon_1_.png"></a>
           <ul class="dropdown-menu myprofile_dropdown">
-            <li><a href="My_Profile.html" class="myprofile_dropdown_link NormalCharacterStyle24">Profile</a></li>
+            <li><a href="My_Profile" class="myprofile_dropdown_link NormalCharacterStyle24">Profile</a></li>
              <li role="separator" class="profile_divider"></li>
             <li><a href="#" class="myprofile_dropdown_link NormalCharacterStyle24">Settings</a></li>
             <li role="separator" class="profile_divider"></li>
@@ -84,7 +85,7 @@
     <div class="col-sm-2 sidenav text-left side-menu">
 
       <div class="dropdown" style="margin-bottom: 10px;">
-    <a data-toggle="collapse" data-target="#clps1" class="main_list NormalCharacterStyle25" href="My_Applications.html">My Applications<div class="icon-arrow-right pull-right"><a class="glyphicon glyphicon-chevron-right drop_down_icon_1_" data-toggle="collapse" data-target="#clps1"></a></div></a>
+    <a data-toggle="collapse" data-target="#clps1" class="main_list NormalCharacterStyle25" href="Dashboard.aspx">My Applications<div class="icon-arrow-right pull-right"><a class="glyphicon glyphicon-chevron-right drop_down_icon_1_" data-toggle="collapse" data-target="#clps1"></a></div></a>
  
 </div>
 
@@ -92,17 +93,30 @@
     <a data-toggle="collapse" data-target="#clps2" class="main_list NormalCharacterStyle18">File Admission App<div class="icon-arrow-right pull-right"><a class="glyphicon glyphicon-chevron-down dropdown_icon " data-toggle="collapse" data-target="#clps2"></a></div></a>
     <div class="collapse" id="clps2">
       <br/>
-        <li class="menu_list selected_bg"><a href="Personal_Details" class="NormalCharacterStyle22">Personal Details</a></li>
+        <li class="menu_list selected_bg"><a href="Personal_Detail" class="NormalCharacterStyle22">Personal Details</a></li>
         <li class="menu_list"><a href="choices" class="NormalCharacterStyle24">Make Choices</a></li>
         <li class="menu_list"><a href="educational_detail" class="NormalCharacterStyle24">Educational Details</a></li>
         <li class="menu_list"><a href="Test_Result" class="NormalCharacterStyle24">Test Results</a></li>
-        <li class="menu_list"><a href="Upload_Documents.html" class="NormalCharacterStyle24">Documents</a></li>
+        <li class="menu_list"><a href="Upload_Documents" class="NormalCharacterStyle24">Documents</a></li>
         <li class="menu_list"><a href="Payments.html" class="NormalCharacterStyle24">Payments</a></li>
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>   
 </div>
 
       <div class="dropdown"  style="margin-bottom: 10px;">
-    <a data-toggle="collapse" data-target="#clps3" class="main_list NormalCharacterStyle25">My Payments<div class="icon-arrow-right pull-right"><a class="glyphicon glyphicon-chevron-right drop_down_icon_1_" data-toggle="collapse" data-target="#clps3"></a></div></a>
+    <a data-toggle="collapse" data-target="#clps3" class="main_list NormalCharacterStyle25" href="Payments.aspx">My Payments<div class="icon-arrow-right pull-right"><a class="glyphicon glyphicon-chevron-right drop_down_icon_1_" data-toggle="collapse" data-target="#clps3"></a></div></a>
  
 </div>
 
