--- a/EducationEverest/Client.master
+++ b/EducationEverest/Client.master
@@ -21,6 +21,8 @@
     <link rel="Stylesheet" type="text/css" href="Content/css/MyStyle.css" />
     <%--<script type="text/javascript" src="Content/js/jquery.uploadify.js"></script>--%>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
+     <script src='<%= ResolveUrl("~/Content/js/jquery.quicksearch.js") %>'></script>
+<script src='<%= ResolveUrl("~/Content/js/jquery.tmpl.min.js") %>'></script>
    <script type="text/javascript">
     $(function() {
    var links = $('a.link').click(function() {
@@ -89,20 +91,20 @@
     <div class="col-sm-2 sidenav text-left side-menu">
 
       <div class="dropdown" style="margin-bottom: 10px;">
-    <a data-toggle="collapse" data-target="#clps1" class="main_list NormalCharacterStyle25" href="Dashboard.aspx">My Applications<div class="icon-arrow-right pull-right"><a class="glyphicon glyphicon-chevron-right drop_down_icon_1_" data-toggle="collapse" data-target="#clps1"></a></div></a>
+    <a data-toggle="collapse" data-target="#clps1" id="applicationDashbord" class="main_list NormalCharacterStyle25" href="Dashboard.aspx">My Applications<div class="icon-arrow-right pull-right"><a class="glyphicon glyphicon-chevron-right drop_down_icon_1_" data-toggle="collapse" data-target="#clps1"></a></div></a>
  
 </div>
 
       <div class="dropdown"  style="margin-bottom: 10px;">
-    <a data-toggle="collapse" id="fileAdmission" data-target="#clps2" class="main_list NormalCharacterStyle18">File Admission App<div class="icon-arrow-right pull-right"><a class="glyphicon glyphicon-chevron-down dropdown_icon " data-toggle="collapse" data-target="#clps2"></a></div></a>
+    <a data-toggle="collapse" id="fileAdmission" data-target="#clps2" class="main_list">File Admission App<div class="icon-arrow-right pull-right"><a class="glyphicon glyphicon-chevron-down dropdown_icon " data-toggle="collapse" data-target="#clps2"></a></div></a>
     <div class="collapse" id="clps2">
       <br/>
-        <li class="menu_list selected_bg"><a href="Personal_Detail" class="NormalCharacterStyle24">Personal Detail</a></li>
-        <li class="menu_list"><a href="choices" class="NormalCharacterStyle24">Make Choices</a></li>
-        <li class="menu_list"><a href="educational_detail" class="NormalCharacterStyle24">Educational Details</a></li>
-        <li class="menu_list"><a href="Test_Result" class="NormalCharacterStyle24">Test Results</a></li>
-        <li class="menu_list"><a href="Upload_Documents.aspx" id="Upload_Documents" class="NormalCharacterStyle24">Documents</a></li>
-        <li class="menu_list"><a href="Payments.aspx" class="NormalCharacterStyle24">Payments</a></li>
+        <li class="menu_list"><a href="Personal_Detail" class="NormalCharacterStyle24" id="prsonalDetail">Personal Detail</a></li>
+        <li class="menu_list"><a href="choices" class="NormalCharacterStyle24" id="makeChoices">Make Choices</a></li>
+        <li class="menu_list"><a href="educational_detail" id="educationalDocument"  class="NormalCharacterStyle24" >Educational Details</a></li>
+        <li class="menu_list"><a href="Test_Result" class="NormalCharacterStyle24" id="testResult">Test Results</a></li>
+        <li class="menu_list"><a href="Upload_Documents" id="Upload_Documents" class="NormalCharacterStyle24">Documents</a></li>
+        <li class="menu_list"><a href="Payments" class="NormalCharacterStyle24">Payments</a></li>
 
 
 
