--- a/EducationEverest/Content/css/MyStyle.css
+++ b/EducationEverest/Content/css/MyStyle.css
@@ -38,3 +38,11 @@
     opacity: 0;
     filter: alpha(opacity=0);
 }
+.css-serial {
+  counter-reset: serial-number;  /* Set the serial number counter to 0 */
+}
+
+.css-serial td:first-child:before {
+  counter-increment: serial-number;  /* Increment the serial number counter */
+  content: counter(serial-number);  /* Display the counter */
+}
