--- a/Design HTML/css/File_admission_application.css
+++ b/Design HTML/css/File_admission_application.css
@@ -994,7 +994,7 @@ a:hover{
   background : rgba(230, 230, 230, 1);
   position : absolute ;
   width : 700px;
-  height : 750px;
+  height : 700px;
   top:10px;
 }
 .pop_divider
@@ -1052,13 +1052,11 @@ a:hover{
   margin-top: 200px;
 }
 div.callout {
-	background-color: #F2F2F2;
-	background-image: -moz-linear-gradient(top, #F2F2F2, #F2F2F2);
+	background-color: white;
 	position: relative;
-	box-shadow: 0px 0px 20px #999;
 	margin-top: 160px;
 	margin-left: 15px;
-	min-height: 250px;
+	min-height: 270px;
 	width: 610px;
 	/*box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset;*/
 }
@@ -1071,9 +1069,32 @@ div.callout {
 }
 
 .callout.bottom::before {
-	left: 10%;
+	left: 35%;
 	top: -20px;
-	border-bottom: 10px solid #F2F2F2;;
+	border-bottom: 10px solid white;
+}
+
+.payment_callout {
+	background-color: white;
+	position: relative;
+	margin-top: 160px;
+	margin-left: 15px;
+	min-height: 270px;
+	width: 610px;
+	/*box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset;*/
+}
+.payment_callout::before {
+	content: "";
+	width: 0px;
+	height: 0px;
+	border: 0.8em solid transparent;
+	position: absolute;
+}
+
+.payment_callout.bottom::before {
+	left: 60%;
+	top: -20px;
+	border-bottom: 10px solid white;
 }
 
 
@@ -1763,6 +1784,16 @@ margin-right: -10.8em;
   line-height : 22px;
   color : #2196F3;
   color : rgb(33, 150, 243);
+}
+.NormalCharacterStyle222
+{
+  font-family : Raleway;
+  font-size : 18px;
+  line-height : 22px;
+  color : #2196F3;
+  color : rgb(33, 150, 243);
+  opacity : 0.88;
+  filter: alpha(opacity=88) progid:DXImageTransform.Microsoft.Alpha(opacity=88) ;
 }
 
 .uni_details_page_bg_2_
