--- a/EducationEverest/Client.master
+++ b/EducationEverest/Client.master
@@ -37,8 +37,7 @@
 <body>
     
     <form id="form1" runat="server"><asp:ScriptManager ID="ScriptManager1"  EnablePartialRendering="true" runat="server"></asp:ScriptManager>
-    <div>
-        <div class="navbar-inverse" style="border-radius: 0px;">
+    <div class="navbar-inverse" style="border-radius: 0px;height: 60px;">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       
@@ -48,28 +47,37 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#" style="font-size: 20px;top: 6px;">Home </a></li>
+        <li><a href="https://educationeverest.org/" target="_blank" style="font-size: 20px;top: 6px;">Home </a></li>
         <li><a href="Dashboard.aspx"><img src="images/header_dashboard_button_1_.png" style="margin: -15px;height: 65px"></a></li>
         <li style="color: transparent;">home</li>
       </ul>
       <div class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="UET" style="width: 260px;border-radius: 3px;">
+        <div class="form-group" style="margin-top:-40px">
+          <asp:TextBox ID="TextBox1" runat="server" style="height:32px"></asp:TextBox>
+        
+          <%--<input type="text" class="form-control" placeholder="UET" style="width: 260px;border-radius: 3px;">--%>
         </div>
-        <span><a href=""><img src="images/search_button.png" style="margin-top: 4px;"></a></span>
-        <span><a href=""><img src="images/filter_button.png" style="margin-top: 4px;;margin-left: -10px;"></a></span>
+          <span><asp:imagebutton ID="btnSearch" ImageUrl="images/search_button.png" style="margin-top: 4px;" runat="server" OnClick="btnSearch_Click"></asp:imagebutton></span>
+          <span><asp:imagebutton ID="btnFilter" ImageUrl="images/filter_button.png" style="margin-top: 4px;margin-left: -10px" runat="server" OnClick="btnFilter_Click" ></asp:imagebutton></span>
+
+        <%--<span><a href=""><img src="images/search_button.png" style="margin-top: 4px;"></a></span>
+        <span><a href=""><img src="images/filter_button.png" style="margin-top: 4px;;margin-left: -10px;"></a></span>--%>
+
       </div>
+
+
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><img src="images/header_notification_icon_1_.png"></a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-              <asp:Label ID="lblLoggedUser" runat="server" Text=""  style="font-size:20px;color:#0094ff;border-bottom:1px solid;border-color:white"></asp:Label>&nbsp;<img src="images/header_profile_icon_1_.png"></a>
+        <li><a href="#" style="margin-top: 5px;"><img src="images/header_notification_icon_1_.png"></a></li>
+        <li class="dropdown" style="height: 60px;">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="NormalCharacterStyle22" style="font-size: 20px;margin-right: 10px;border-bottom: 1px solid white;">
+              <asp:Label ID="lblLoggedUser" runat="server" Text=""  style="font-size:20px;color:#0094ff;border-bottom:1px solid;border-color:white"></asp:Label>
+          </span>&nbsp;<img src="images/header_profile_icon_1_.png"></a>
           <ul class="dropdown-menu myprofile_dropdown">
             <li><a href="My_Profile.aspx" class="myprofile_dropdown_link NormalCharacterStyle24">Profile</a></li>
              <li role="separator" class="profile_divider"></li>
-            <%--<li><a href="#" class="myprofile_dropdown_link NormalCharacterStyle24">Settings</a></li>
+            <%--<li><a href="#" class="myprofile_dropdown_link NormalCharacterStyle25">Settings</a></li>
             <li role="separator" class="profile_divider"></li>--%>
-            <%--<li><a href="Login.aspx" class="myprofile_dropdown_link NormalCharacterStyle24">Log Out</a></li>--%>
+            <%--<li><a href="Login.aspx"  class="myprofile_dropdown_link NormalCharacterStyle25">Log Out</a></li>--%>
               <li><asp:LinkButton ID="logout" CausesValidation="false" OnClick="logout_Click" runat="server">
                                         <i class="myprofile_dropdown_link NormalCharacterStyle24"></i>Logout
                                     </asp:LinkButton></li>
@@ -99,7 +107,7 @@
 </div>
 
       <div class="dropdown"  style="margin-bottom: 10px;">
-    <a data-toggle="collapse" id="fileAdmission" data-target="#clps2" class="main_list">File Admission App<div class="icon-arrow-right pull-right"><a class="glyphicon glyphicon-chevron-down dropdown_icon " data-toggle="collapse" data-target="#clps2"></a></div></a>
+    <a data-toggle="collapse" id="fileAdmission" data-target="#clps2" class="main_list NormalCharacterStyle25">File Admission App<div class="icon-arrow-right pull-right"><a class="glyphicon glyphicon-chevron-down dropdown_icon " data-toggle="collapse" data-target="#clps2"></a></div></a>
     <div class="collapse" id="clps2">
       <br/>
         <li class="menu_list"><a href="Personal_Detail.aspx" class="NormalCharacterStyle24" id="prsonalDetail">Personal Detail</a></li>
