--- a/EducationEverest/Content/css/MyStyle.css
+++ b/EducationEverest/Content/css/MyStyle.css
@@ -42,7 +42,7 @@
   counter-reset: serial-number;  /* Set the serial number counter to 0 */
 }
 
-.css-serial td:first-child:before {
+.css-serial tr:nth-child(n+2) td:first-child:before {
   counter-increment: serial-number;  /* Increment the serial number counter */
   content: counter(serial-number);  /* Display the counter */
 }
