--- a/EducationEverest/Admin/Admin.master
+++ b/EducationEverest/Admin/Admin.master
@@ -65,6 +65,22 @@
                             </a>
                             
                         </li>
+
+                        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Users">
+                            <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseMulti" data-parent="#exampleAccordion">
+                                <i class="fa fa-fw fa-user-o"></i>
+                                <span class="nav-link-text">Candidates</span>
+                            </a>
+                            <ul class="sidenav-second-level collapse" id="collapseMulti">
+                                <li>
+                                    <a href="AllCandidates.aspx">All Candidates</a>
+                                </li>
+                                <%--<li>
+                                    <a href="NewUser.aspx">Add New</a>
+                                </li>--%>
+                            </ul>
+                        </li>
+
                         <%--<li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
                     <a class="nav-link" href="#">
                         <i class="fa fa-fw fa-link"></i>
