--- a/EducationEverest/Admin/Content/css/bootstrap.css
+++ b/EducationEverest/Admin/Content/css/bootstrap.css
@@ -2368,6 +2368,23 @@ input[type="button"].btn-block {
   width: 100%;
 }
 
+.btn-dark {
+  color: #fff;
+  background-color: #343a40;
+  border-color: #343a40;
+}
+
+.btn-dark:hover {
+  color: #fff;
+  background-color: #23272b;
+  border-color: #1d2124;
+}
+
+.btn-dark:focus, .btn-dark.focus {
+  box-shadow: 0 0 0 3px rgba(52, 58, 64, 0.5);
+}
+
+
 .fade {
   opacity: 0;
   -webkit-transition: opacity 0.15s linear;
