--- a/EducationEverest/css/File_admission_application.css
+++ b/EducationEverest/css/File_admission_application.css
@@ -1518,8 +1518,8 @@ margin-right: -10em;
   border-color : #FF9800;*/
   /*border-color : rgba(255, 152, 0, 1);
   border-width : 2px;*/
-  width : 50px;
-  height : 50px;
+  /*width : 50px;
+  height : 50px;*/
 
 }
 .NormalCharacterStyle112
