--- a/EducationEverest/css/style.css
+++ b/EducationEverest/css/style.css
@@ -316,4 +316,18 @@ a:hover,a:focus,a:active,a:visited{
     color: #B3B3B3;
     color: rgb(179, 179, 179);
 }
+.btn_custom
+{
+    background: #2196F3;
+    background: rgba(33, 150, 243, 1);
+    opacity: 0.88;
+    color: white;
+    width: 200px;
+    height: 45px;
+    border-radius: 2px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    filter: alpha(opacity=88) progid:DXImageTransform.Microsoft.Alpha(opacity=88);
+
+}
 }
