Register Email Reset Password Percentage field validations

--- a/EducationEverest/Content/css/sb-admin.css
+++ b/EducationEverest/Content/css/sb-admin.css
@@ -325,6 +325,8 @@ body.sidenav-toggled .navbar-sidenav-tooltip.show {
 
 .card-login {
   max-width: 25rem; }
+.card-login2 {
+  max-width: 40rem; }
 
 .card-register {
   max-width: 40rem; }
